Use Haunted virtual components and CSS modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,8 @@
     "module": "esNext",
     "target": "es2017",
     "moduleResolution": "node",
-    "strict": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "strict": false,
+
     "experimentalDecorators": true
   },
   "include": [
