--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "lit-element": "2.3.1",
     "@vaadin/vaadin-date-time-picker": "1.3.0",
     "@vaadin/form": "./target/flow-frontend/form",
-    "open": "^7.2.1"
+    "open": "^7.2.1",
+    "haunted": "^4.7.0",
+    "page": "^1.11.6"
   },
   "devDependencies": {
     "webpack": "4.42.0",
@@ -69,7 +71,9 @@
     "chokidar": "^3.4.0",
     "validator": "12.0.0",
     "lit-html": "1.2.1",
-    "@types/validator": "10.11.3"
+    "@types/validator": "10.11.3",
+    "css-loader": "^4.3.0",
+    "style-loader": "^1.2.1"
   },
   "vaadin": {
     "dependencies": {
@@ -141,6 +145,6 @@
       "lit-html": "1.2.1",
       "@types/validator": "10.11.3"
     },
-    "hash": "afb526b2b4ea0e4bf87cd1f8f686e9e12cfd16d062e1238ed8ad854da5a4106c"
+    "hash": "500f65cba77a1f71591d7a406e599d29531c1d828b2341667a1ffcaadb6768ab"
   }
 }
